syntax = "proto3";
option go_package = "proto/worker";
option java_multiple_files = true;
option java_package = "com.jobprocessor.grpc.proto.gen.worker";
option java_outer_classname = "JobProcessorProto";

package proto;

service JobProcessor {
  rpc GetJob (JobId) returns (JobStatus) {}
  rpc RunJob (JobRequest) returns (JobStatus) {}
  rpc CancelJob (JobId) returns (JobStatus) {}
  rpc RemoveJob (JobId) returns (JobStatus) {}
}

message JobId {
  int64 job_id = 1;
}

message JobRequest {
  Job job = 1;
}

message Job {
  JobId job_id = 1;
  string name = 2;
  ExecType language = 3;
  string cmd = 4;
  bool   parallel = 5;
  int32  exec_date = 6;
  bytes  exec_file = 7;
  enum ExecType {
    JAVA = 0;
    GO = 1;
    PYTHON = 2;
    C = 3;
    Cpp = 4;
    DB_QUERY = 5;
  }
}

message JobDetail {
  Job job = 1;
}

message JobStatus {
  JobDetail job_detail = 1;
  int32 last_exec = 2;
  int32 last_exec_duration = 3;
}
